--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /backend/.venv
 /backend/__pycache__
 
+/terraform/.terraform
+/terraform/.terraform.lock.hcl
+terraform.tfstate
+
 # Logs
 logs
 *.log
