Added services to the k8 setup, still needs work

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-deployment
+  name: frontend
 spec:
   replicas: 3
   selector:
@@ -20,16 +20,24 @@ spec:
           ports:
             - containerPort: 80
 ---
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: my-service
+  name: backend
 spec:
-  type: LoadBalancer
+  replicas: 3
   selector:
-    app: frontend
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30080
+    matchLabels:
+      app: backend
+  template:
+    metadata:
+      name: backend
+      labels:
+        app: backend
+    spec:
+      containers:
+        - name: backend
+          image: backend:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
