--- a/kubernetes/services.yaml
+++ b/kubernetes/services.yaml
@@ -1,15 +1,26 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: frontend-service
 spec:
-  type: LoadBalancer
   selector:
     app: frontend
   ports:
     - protocol: TCP
-      port: 80
+      port: 3000
       targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+spec:
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -23,13 +34,13 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend
+                name: frontend-service
                 port:
-                  number: 80
+                  number: 3000
           - path: /api
             pathType: Prefix
             backend:
               service:
-                name: backend
+                name: backend-service
                 port:
                   number: 8000
