--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: us-east1-docker.pkg.dev/gcp-practice-1-453919/my-containers/frontend:latest
+          image: us-east1-docker.pkg.dev/gcp-practice-1-453919/my-containers/frontend:35000b9402fda7da91a033431a095355936529f9
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
@@ -38,7 +38,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: us-east1-docker.pkg.dev/gcp-practice-1-453919/my-containers/backend:latest
+          image: us-east1-docker.pkg.dev/gcp-practice-1-453919/my-containers/backend:35000b9402fda7da91a033431a095355936529f9
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
