--- a/kubernetes/services.yaml
+++ b/kubernetes/services.yaml
@@ -26,7 +26,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  tls:
+    - hosts:
+        - audiobytes.app
+      secretName: my-tls-secret
   rules:
     - http:
         paths:
