Changed into terraform directory first

--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -11,8 +11,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: List the files
-        run: ls -la
+      - name: Move to the Terraform directory
+        run: |
+          cd terraform
+          pwd
+          la -la
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
       - name: Test Terraform
