--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -16,6 +16,10 @@ jobs:
       - name: Run Terraform
         run: |
           cd terraform
-          pwd
           terraform init
-          ls -la
+          export TF_VAR_project_id=gcp-practice-1-453919
+          export TF_VAR_region=us-east1
+          export TF_VAR_zone=us-east1-b
+          export TF_VAR_external_ip=0.0.0.0
+          export TF_VAR_domain_name=audiobytes.app
+          terraform plan
