--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Terraform Action
         uses: hashicorp/setup-terraform@v3
+      - name: Setup Google Cloud Auth
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{secrets.GCLOUD_SERVICE_ACCOUNT}}"
       - name: Run Terraform
         run: |
           cd terraform
