--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -21,9 +21,9 @@ jobs:
         run: |
           cd terraform
           terraform init
-          export TF_VAR_project_id=gcp-practice-1-453919
+          export TF_VAR_project_id=${{env.PROJECT_ID}}
           export TF_VAR_region=us-east1
           export TF_VAR_zone=us-east1-b
           export TF_VAR_external_ip=0.0.0.0
-          export TF_VAR_domain_name=audiobytes.app
+          export TF_VAR_domain_name=audiobytes.app.
           terraform plan
