--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -9,21 +9,24 @@ jobs:
     name: The Main Job Yo
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Setup Terraform Action
-        uses: hashicorp/setup-terraform@v3
-      - name: Setup Google Cloud Auth
-        uses: "google-github-actions/auth@v2"
-        with:
-          credentials_json: "${{secrets.GCLOUD_SERVICE_ACCOUNT}}"
-      - name: Run Terraform
-        run: |
-          cd terraform
-          terraform init
-          export TF_VAR_project_id=${{env.PROJECT_ID}}
-          export TF_VAR_region=us-east1
-          export TF_VAR_zone=us-east1-b
-          export TF_VAR_external_ip=0.0.0.0
-          export TF_VAR_domain_name=audiobytes.app.
-          terraform plan
+      - name: Test Variables
+        run: echo ${{vars.PROJECT_ID}}
+
+    #   - name: Checkout code
+    #     uses: actions/checkout@v4
+    #   - name: Setup Terraform Action
+    #     uses: hashicorp/setup-terraform@v3
+    #   - name: Setup Google Cloud Auth
+    #     uses: "google-github-actions/auth@v2"
+    #     with:
+    #       credentials_json: "${{secrets.GCLOUD_SERVICE_ACCOUNT}}"
+    #   - name: Run Terraform
+    #     run: |
+    #       cd terraform
+    #       terraform init
+    #       export TF_VAR_project_id=${{vars.PROJECT_ID}}
+    #       export TF_VAR_region=us-east1
+    #       export TF_VAR_zone=us-east1-b
+    #       export TF_VAR_external_ip=0.0.0.0
+    #       export TF_VAR_domain_name=audiobytes.app.
+    #       terraform plan
