--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -13,17 +13,19 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Terraform Action
         uses: hashicorp/setup-terraform@v3
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       - name: Setup Google Cloud Auth
         uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: "${{secrets.GCLOUD_SERVICE_ACCOUNT}}"
+          credentials_json: "${{ secrets.GCLOUD_SERVICE_ACCOUNT }}"
       - name: Run Terraform
         run: |
           cd terraform
           terraform init
-          export TF_VAR_project_id=${{vars.PROJECT_ID}}
-          export TF_VAR_region=${{vars.REGION}}
-          export TF_VAR_zone=${{vars.ZONE}}
-          export TF_VAR_external_ip=${{vars.EXTERNAL_IP}}
-          export TF_VAR_domain_name=${{vars.DOMAIN_NAME}}
+          export TF_VAR_project_id=${{ vars.PROJECT_ID }}
+          export TF_VAR_region=${{ vars.REGION }}
+          export TF_VAR_zone=${{ vars.ZONE }}
+          export TF_VAR_external_ip=${{ vars.EXTERNAL_IP }}
+          export TF_VAR_domain_name=${{ vars.DOMAIN_NAME }}
           terraform plan
