--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -28,6 +28,7 @@ jobs:
       #     export TF_VAR_zone=${{ vars.ZONE }}
       #     export TF_VAR_external_ip=${{ vars.EXTERNAL_IP }}
       #     export TF_VAR_domain_name=${{ vars.DOMAIN_NAME }}
+      #     export TF_VAR_cluster_name=${{ vars.CLUSTER_NAME }}
       #     terraform apply -auto-approve
       - name: Edit Image Tags
         env:
@@ -41,3 +42,9 @@ jobs:
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
           kubectl version --client
+      - name: Connect to Cluster
+        run: gcloud container clusters get-credentials ${{ vars.CLUSTER_NAME }} --region ${{ vars.REGION }} --project ${{ vars.PROJECT_ID }}
+      - name: Test Applying Kubernetes
+        run: |
+          kubectl apply -f ./kubernetes
+          kubectl get all
