--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -15,10 +15,10 @@ jobs:
       #   uses: hashicorp/setup-terraform@v3
       #   with:
       #     cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-      # - name: Setup Google Cloud Auth
-      #   uses: "google-github-actions/auth@v2"
-      #   with:
-      #     credentials_json: "${{ secrets.GCLOUD_SERVICE_ACCOUNT }}"
+      - name: Setup Google Cloud Auth
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCLOUD_SERVICE_ACCOUNT }}"
       # - name: Run Terraform
       #   run: |
       #     cd terraform
