--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -43,10 +43,10 @@ jobs:
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
           kubectl version --client
       - name: Connect to Cluster
-        run: gcloud container clusters get-credentials ${{ vars.CLUSTER_NAME }} --region ${{ vars.REGION }} --project ${{ vars.PROJECT_ID }}
-      - name: Test Applying Kubernetes
         run: |
-          pwd
-          ls -la
-          kubectl apply -f ./kubernetes
-          kubectl get all
+          gcloud container clusters get-credentials ${{ vars.CLUSTER_NAME }} --region ${{ vars.REGION }} --project ${{ vars.PROJECT_ID }}
+          gcloud components install gke-gcloud-auth-plugin
+      # - name: Test Applying Kubernetes
+      #   run: |
+      #     kubectl apply -f ./kubernetes
+      #     kubectl get all
