--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - actions-test
+env:
+  FRONTEND_IMAGE: ${{ vars.REGION }}-docker.pkg.dev/${{ vars.PROJECT_ID }}/${{ vars.CONTAINER_REGISTRY }}/frontend:${{ github.sha }}
+  BACKEND_IMAGE: ${{ vars.REGION }}-docker.pkg.dev/${{ vars.PROJECT_ID }}/${{ vars.CONTAINER_REGISTRY }}/backend:${{ github.sha }}
 jobs:
   main-job:
     name: Main
@@ -13,16 +16,21 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Docker
         uses: docker/setup-docker-action@v4
-      - name: Test Docker
-        run: docker build -t frontend-test ./frontend
+      - name: Setup Google Cloud Auth
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCLOUD_SERVICE_ACCOUNT }}"
+      - name: Build and Push Images
+        run: |
+          docker build -t $FRONTEND_IMAGE ./frontend
+          docker build -t $BACKEND_IMAGE ./backend
+
+          docker push $FRONTEND_IMAGE
+          docker push $BACKEND_IMAGE
       # - name: Setup Terraform Action
       #   uses: hashicorp/setup-terraform@v3
       #   with:
       #     cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-      # - name: Setup Google Cloud Auth
-      #   uses: "google-github-actions/auth@v2"
-      #   with:
-      #     credentials_json: "${{ secrets.GCLOUD_SERVICE_ACCOUNT }}"
       # - name: "Set up Cloud SDK"
       #   uses: "google-github-actions/setup-gcloud@v2"
       #   with:
