--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -20,6 +20,11 @@ jobs:
         uses: "google-github-actions/auth@v2"
         with:
           credentials_json: "${{ secrets.GCLOUD_SERVICE_ACCOUNT }}"
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
+        with:
+          version: ">= 363.0.0"
+          install_components: "gke-gcloud-auth-plugin"
       - name: Build and Push Images
         run: |
           docker build -t $FRONTEND_IMAGE ./frontend
@@ -31,11 +36,6 @@ jobs:
       #   uses: hashicorp/setup-terraform@v3
       #   with:
       #     cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-      # - name: "Set up Cloud SDK"
-      #   uses: "google-github-actions/setup-gcloud@v2"
-      #   with:
-      #     version: ">= 363.0.0"
-      #     install_components: "gke-gcloud-auth-plugin"
       # - name: Run Terraform
       #   run: |
       #     cd terraform
@@ -48,9 +48,6 @@ jobs:
       #     export TF_VAR_cluster_name=${{ vars.CLUSTER_NAME }}
       #     terraform apply -auto-approve
       # - name: Build and Push Images
-      #   env:
-      #     FRONTEND_IMAGE: ${{ vars.REGION }}-docker.pkg.dev/${{ vars.PROJECT_ID }}/${{ vars.CONTAINER_REGISTRY }}/frontend:${{ github.sha }}
-      #     BACKEND_IMAGE: ${{ vars.REGION }}-docker.pkg.dev/${{ vars.PROJECT_ID }}/${{ vars.CONTAINER_REGISTRY }}/backend:${{ github.sha }}
       #   run: |
       #     echo $FRONTEND_IMAGE
       #     echo $BACKEND_IMAGE
