--- a/.github/workflows/github-actions-test.yaml
+++ b/.github/workflows/github-actions-test.yaml
@@ -25,18 +25,18 @@ jobs:
         with:
           version: ">= 363.0.0"
           install_components: "gke-gcloud-auth-plugin"
-      - name: test creds
-        run: |
-          gcloud projects get-iam-policy ${{ vars.PROJECT_ID }} --format=json | jq '.bindings[] | select(.role=="roles/artifactregistry.writer")'
-          gcloud auth list
-          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://${{ vars.REGION }}-docker.pkg.dev
-      # - name: Build and Push Images
+      # - name: test creds
       #   run: |
-      #     docker build -t $FRONTEND_IMAGE ./frontend
-      #     docker build -t $BACKEND_IMAGE ./backend
+      #     gcloud projects get-iam-policy ${{ vars.PROJECT_ID }} --format=json | jq '.bindings[] | select(.role=="roles/artifactregistry.writer")'
+      #     gcloud auth list
+      #     gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://${{ vars.REGION }}-docker.pkg.dev
+      - name: Build and Push Images
+        run: |
+          docker build -t $FRONTEND_IMAGE ./frontend
+          docker build -t $BACKEND_IMAGE ./backend
 
-      #     docker push $FRONTEND_IMAGE
-      #     docker push $BACKEND_IMAGE
+          docker push $FRONTEND_IMAGE
+          docker push $BACKEND_IMAGE
       # - name: Setup Terraform Action
       #   uses: hashicorp/setup-terraform@v3
       #   with:
