--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: us-east1-docker.pkg.dev/gcp-practice-1-453919/my-containers/frontend
+          image: frontend
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
@@ -38,7 +38,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: us-east1-docker.pkg.dev/gcp-practice-1-453919/my-containers/backend
+          image: backend
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
